force-app/main/default/objects/Visit_Sample__c/Visit_Sample__c.object-meta.xml
<CustomObject>
    <label>Visit Sample</label>
    <nameField>
        <displayFormat>VS-{00000}</displayFormat>
        <label>Visit Sample Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Samples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>