force-app/main/default/objects/Visit_Sample__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <label>Lot Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>