force-app/main/default/objects/Visit_Sample__c/fields/Sample_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Sample_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Inventory</label>
    <referenceTo>Sample_Inventory__c</referenceTo>
    <relationshipLabel>Visit Samples</relationshipLabel>
    <relationshipName>Visit_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>