force-app/main/default/objects/Visit_Sample__c/fields/Visit_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Visit_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Attendee</label>
    <referenceTo>Visit_Attendee__c</referenceTo>
    <relationshipLabel>Visit Samples</relationshipLabel>
    <relationshipName>Visit_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>